@@ -278,20 +278,13 @@ TIEXPORT int TICALL ti8x_file_read_regular(const char *filename, Ti8xRegular *co
       ti83p_flag = !0;		// true TI83+ file (2 extra bytes)
     if (is_ti8586(content->model)) 
 	{
-      /* name may follow one of three conventions: padded with zeroes
-       * (most correct, generated by TI's software), padded with null bytes,
+      /* name may follow one of three conventions: padded with SPC bytes
+       * (most correct, generated by TI's software), padded with NULL bytes,
        * or unpadded.  TI's software accepts all three, so we should too.
        */
        fskip(f, 3);
        fread_byte(f, &name_length);
-       fskip(f, name_length);
-       
-       fread_byte(f, &test_space);
-       fskip (f, -1);
-       
-       //printf("test_space: %x at %x\n", test_space, (int)ftell(f));
-       if (test_space == '\0' || test_space == ' ')  // skip padding if padded
-	 fskip(f, 8 - name_length);
+       fskip(f, content->model == CALC_TI85 ? name_length : 8);
     }
     else if ((content->model == CALC_TI83P) || (content->model == CALC_TI84P))
       fskip(f, 13);
@@ -321,17 +314,10 @@ TIEXPORT int TICALL ti8x_file_read_regular(const char *filename, Ti8xRegular *co
     if (is_ti8586(content->model))
       fread_byte(f, &name_length);
     fread_n_chars(f, name_length, entry->var_name);
+	if(content->model == CALC_TI86)
+		fskip(f, 8 - name_length);
     tifiles_transcode_varname(content->model, entry->name, entry->var_name, 
 			   entry->type);
-    if (is_ti8586(content->model)) 
-	{
-      /* Again, compatibility with padded and unpadded files */
-      fread_byte(f, &test_space);
-      fskip (f, -1);
-      
-      if (test_space == '\0' || test_space == ' ')  // skip padding if padded
-		fskip(f, 8 - name_length);
-    }
     if (ti83p_flag) 
 	{
       entry->attr = (fgetc(f) == 0x80 ? ATTRB_ARCHIVED : ATTRB_NONE);
@@ -684,7 +670,10 @@ TIEXPORT int TICALL ti8x_file_write_regular(const char *fname, Ti8xRegular *cont
 	{
       size_t name_length = strlen(entry->var_name);
       fwrite_byte(f, (uint8_t)name_length);
-      fwrite_n_chars(f, name_length, entry->var_name);
+	  if(content->model == CALC_TI85)
+		fwrite_n_chars(f, name_length, entry->var_name);
+	  else
+		fwrite_n_chars2(f, 8, entry->var_name);
     }
     else
     	fwrite_n_chars(f, 8, entry->var_name);
