@@ -19,7 +19,8 @@ Log:
 	- fixed missing fclose()
 	- fixed fsignature in TI8x support
 
-Pb with TI8x write flash.
+	TI86 group file seems to be weird ...
+	Pb with TI8x write flash.
 	Add TiGroup (*.tig) support which is a kind of file container.
 	
 ====[ Version II ]====
